crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@19.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE num_exp_power_10_ln (id int4, expected numeric(1000,800));"
---
CreateStmt@0..71
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..32
    Ident@13..32 "num_exp_power_10_ln"
  Whitespace@32..33 " "
  Ascii40@33..34 "("
  ColumnDef@34..41
    Ident@34..36 "id"
    Whitespace@36..37 " "
    TypeName@37..41
      Ident@37..41 "int4"
  Ascii44@41..42 ","
  Whitespace@42..43 " "
  ColumnDef@43..68
    Ident@43..51 "expected"
    Whitespace@51..52 " "
    TypeName@52..68
      Numeric@52..59 "numeric"
      Ascii40@59..60 "("
      AConst@60..64
        Iconst@60..64 "1000"
      Ascii44@64..65 ","
      AConst@65..68
        Iconst@65..68 "800"
  Ascii41@68..69 ")"
  Ascii41@69..70 ")"
  Ascii59@70..71 ";"

